<resources>
    <string name="logo">My App</string>
    <string name="app_name">Calculator</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="negative">+/-</string>
    <string name="_0">0</string>
    <string name="inverse">1 / x</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="minus">-</string>
    <string name="nine">9</string>
    <string name="comma">.</string>
    <string name="six">6</string>
    <string name="ce">CE</string>
    <string name="percent">%</string>
    <string name="three">3</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="clear">C</string>
    <string name="five">5</string>
    <string name="two">2</string>
    <string name="multiplication">×</string>
    <string name="four">4</string>
    <string name="addition">+</string>
    <string name="square">x²</string>
    <string name="sqrt">√x</string>
    <string name="division">÷</string>
    <string name="equality">=</string>
    <string name="todo">TODO</string>
    <string name="calculator">Calculator</string>
    <string name="conversion">Conversion</string>
    <string name="currency">Currency</string>
    <string name="volume">Volume</string>
    <string name="length">Length</string>
    <string name="weight_mass">Weight and Mass</string>
    <string name="temperature">Temperature</string>
    <string name="date">Date Calculation</string>

    <string-array name="currencies_array">
        <item>Dirham - Morocco</item>
        <item>Dollar $ - US</item>
        <item>Euro € - Europe</item>
        <item>Pound £ - UK</item>
        <item>Riyal - Saudi Arabia</item>
    </string-array>

    <string-array name="temperature_units">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>

    <string-array name="length_array">
        <item>Kilometre</item>
        <item>Meter</item>
        <item>Centimeter</item>
        <item>Millimetre</item>
        <item>Micrometres</item>
        <item>Nanometre</item>
        <item>Mile</item>
        <item>Yard</item>
        <item>Foot</item>
        <item>Inch</item>
        <item>Nautical mile</item>
    </string-array>
</resources>