<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_navigation"
    app:startDestination="@id/nav_calculator">

    <fragment
        android:id="@+id/nav_calculator"
        android:label="@string/calculator"
        tools:layout="@layout/fragment_calculator"
        android:name="com.example.calculator.ui.calculator.CalculatorFragment" />

    <fragment
        android:id="@+id/nav_currency"
        android:label="@string/currency"
        tools:layout="@layout/fragment_currency"
        android:name="com.example.calculator.ui.currency.CurrencyFragment"/>

    <fragment
        android:id="@+id/nav_temperature"
        android:label="@string/temperature"
        tools:layout="@layout/fragment_temperature"
        android:name="com.example.calculator.ui.temperature.TemperatureFragment"/>

    <fragment
        android:id="@+id/nav_length"
        android:label="@string/length"
        tools:layout="@layout/fragment_length"
        android:name="com.example.calculator.ui.length.LengthFragment"/>

    <fragment
        android:id="@+id/nav_date"
        android:label="@string/date"
        tools:layout="@layout/fragment_date"
        android:name="com.example.calculator.ui.date.DateFragment"/>
</navigation>