<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculator_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/main_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/main_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="25dp"
                android:layout_weight="1"
                android:gravity="bottom">

                <TextView
                    android:id="@+id/operation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_bold"/>

                <TextView
                    android:id="@+id/result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"/>

            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="6"
                android:columnCount="4"
                android:paddingVertical="30dp"
                android:paddingHorizontal="10dp"
                android:layout_gravity="bottom"
                android:layout_weight="3"
                android:background="@drawable/grid_layout">

                <Button
                    android:id="@+id/percent"
                    android:text="@string/percent"
                    android:textColor="@color/other_operator_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp" />

                <Button
                    android:id="@+id/ce"
                    android:text="@string/ce"
                    android:textColor="@color/other_operator_color"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <Button
                    android:id="@+id/c"
                    android:text="@string/clear"
                    android:textColor="@color/other_operator_color"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <ImageButton
                    android:id="@+id/erase"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:backgroundTint="@color/button_bg"
                    android:contentDescription="@string/todo"
                    android:gravity="center_vertical|center_horizontal"
                    android:src="@mipmap/delete"
                    app:cornerRadius="20dp" />

                <Button
                    android:id="@+id/onx"
                    android:text="@string/inverse"
                    android:textColor="@color/other_operator_color"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <Button
                    android:id="@+id/square"
                    android:text="@string/square"
                    android:textColor="@color/other_operator_color"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <Button
                    android:id="@+id/sqrt"
                    android:text="@string/sqrt"
                    android:textColor="@color/other_operator_color"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <Button
                    android:id="@+id/devide"
                    android:text="@string/division"
                    android:textColor="@color/operator_color"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <Button
                    android:id="@+id/number7"
                    android:text="@string/seven"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <Button
                    android:id="@+id/number8"
                    android:text="@string/eight"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <Button
                    android:id="@+id/number9"
                    android:text="@string/nine"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <Button
                    android:id="@+id/multiply"
                    android:text="@string/multiplication"
                    android:textColor="@color/operator_color"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <Button
                    android:id="@+id/number4"
                    android:text="@string/four"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <Button
                    android:id="@+id/number5"
                    android:text="@string/five"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <Button
                    android:id="@+id/number6"
                    android:text="@string/six"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <Button
                    android:id="@+id/minus"
                    android:text="@string/minus"
                    android:textColor="@color/operator_color"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <Button
                    android:id="@+id/number1"
                    android:text="@string/one"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <Button
                    android:id="@+id/number2"
                    android:text="@string/two"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <Button
                    android:id="@+id/number3"
                    android:text="@string/three"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <Button
                    android:id="@+id/addition"
                    android:text="@string/addition"
                    android:textColor="@color/operator_color"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <Button
                    android:id="@+id/plusMinus"
                    android:text="@string/negative"
                    android:textColor="@color/other_operator_color"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <Button
                    android:id="@+id/number0"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:backgroundTint="@color/button_bg"
                    android:gravity="center_vertical|center_horizontal"
                    app:cornerRadius="15dp"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <Button
                    android:id="@+id/comma"
                    android:text="@string/comma"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

                <Button
                    android:id="@+id/equal"
                    android:text="@string/equality"
                    android:textColor="@color/operator_color"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="2.5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:backgroundTint="@color/button_bg"
                    app:cornerRadius="15dp"/>

            </GridLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>